force-app/main/default/objects/JRNY_Court_Order__c/JRNY_Court_Order__c.object-meta.xml
<CustomObject>
    <label>Court Order</label>
    <pluralLabel>Court Orders</pluralLabel>
    <nameField>
        <label>Court Order Number</label>
        <type>AutoNumber</type>
        <displayFormat>CO-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>A court order or legal mandate bringing a participant into a program. Referenced by Program Enrollment records that were created as a result of the order.</description>
</CustomObject>