force-app/main/default/objects/JRNY_Court_Order__c/fields/Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>Docket_Number__c</fullName>
    <label>Docket / Case Number</label>
    <type>Text</type>
    <length>100</length>
</CustomField>