force-app/main/default/objects/JRNY_Court_Order__c/fields/Issuing_Court__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Court__c</fullName>
    <label>Issuing Court</label>
    <description>The court that issued the order.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>