force-app/main/default/objects/JRNY_Court_Order__c/fields/Judge_Name__c.field-meta.xml
<CustomField>
    <fullName>Judge_Name__c</fullName>
    <label>Judge Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>