force-app/main/default/objects/JRNY_Court_Order__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes / Terms</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>