force-app/main/default/objects/JRNY_Court_Order__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Court Orders</relationshipLabel>
    <relationshipName>Court_Orders</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <description>The participant (Person Account) named in the order.</description>
</CustomField>