force-app/main/default/objects/JRNY_Court_Order__c/fields/Probation_Officer__c.field-meta.xml
<CustomField>
    <fullName>Probation_Officer__c</fullName>
    <label>Probation Officer</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Court Orders</relationshipLabel>
    <relationshipName>Court_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The supervising probation officer, a Contact under their agency's Account (e.g. County Probation Department).</description>
</CustomField>